--- a/demo/index.html
+++ b/demo/index.html
@@ -13,9 +13,9 @@
 		window.addEventListener("load", callback, false);
 		
 		function callback(){
-		    var 	traqball_1 = new Traqball({stage: "stage1", axis: [-0.57,0.777,-0.287], angle: 1}),
-		      		traqball_2 = new Traqball({stage: "stage2", axis: [-0.57,0.777,-0.287], angle: 1}),
-		      		traqball_3 = new Traqball({stage: "stage3", axis: [-0.57,0.777,-0.287], angle: 1});
+		    var 	traqball_1 = new Traqball({stage: "stage1", axis: [-0.57,0.777,-0.287], angle: 1, limitAxxis: "y"}),
+		      		traqball_2 = new Traqball({stage: "stage2", axis: [-0.57,0.777,-0.287], angle: 1, limitAxxis: "y"}),
+		      		traqball_3 = new Traqball({stage: "stage3", axis: [-0.57,0.777,-0.287], angle: 1, limitAxxis: "y"});
 		  }
 				
 		</script>
